Исправление работы локальных тестов (перенос в medium всего, что работает только в специальном окружении)